Fix a bunch of issues relating to dynamic changes of border images.  (Bug 445810)  r=robarnold  sr=bzbarsky